--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     <div class="container">
       <div class="row">
         <div class="item col-3">
-          test
+          <img src="images/vision.png" alt="vision" width="100%" height="100%">
         </div>
         <div class="item col-9">
-          test
+          <img src="images/coding-wallpaper.jpg" alt="" height="100%" width="100%" opacity: 0.2;>
+          <p class="my-name">안녕하세요<br>개발자 김동영입니다</p>
+          <p class="my-introduce">공부가 취미인 풀 스택 웹 개발자입니다.<br>
+            매우 꼼꼼한 성격, 그리고 공부를 밥 먹듯이 하는 습관이 저의 장점입니다.</p>
         </div>
       </div>
     </div>
@@ -56,19 +59,107 @@
   <section id="my-intro" class="my-intro">
     <div class="container">
       <div class="row">
-        <div class="item col-6">
-          사진
+        <div class="item col-2">
+          <img src="images/picture.png" alt="" width="100%" height="100%">
         </div>
-        <div class="item col-6">
-          자기소개
+        <div class="item col-10">
+          <div class="container">                      
+            <div class="row text-center justify-content-center mb-5">
+                <div class="col-xl-6 col-lg-8">
+                    <h2 class="font-weight-bold">About me</h2>
+                </div>
+            </div>
+        
+            <div class="row">
+                <div class="col">
+                    <div class="timeline-steps aos-init aos-animate" data-aos="fade-up">
+                        <div class="timeline-step">
+                            <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2003">
+                                <div class="inner-circle"></div>
+                                <p class="h6 mt-3 mb-1">2015</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0">동아대학교<br>화학공학과 입학</p>
+                            </div>
+                        </div>
+                        <div class="timeline-step">
+                            <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2004">
+                                <div class="inner-circle"></div>
+                                <p class="h6 mt-3 mb-1">2022</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0">개발공부<br> 독학 시작</p>
+                            </div>
+                        </div>
+                        <div class="timeline-step">
+                            <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2005">
+                                <div class="inner-circle"></div>
+                                <p class="h6 mt-3 mb-1">2023</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0">싸피 10기<br> 과정 수강</p>
+                            </div>
+                        </div>
+                        <div class="timeline-step">
+                            <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2010">
+                                <div class="inner-circle"></div>
+                                <p class="h6 mt-3 mb-1">202n</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0">취직할수 있을까...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
       </div>
     </div>
   </section>
   <!-- 프로젝트 -->
-  <section id="project" class="project">project</section>
+  <section id="project" class="project">
+    <div class="container">
+      <div class="row">
+        <div class="item col-6">
+          <a href="https://github.com/SSAFY10kim/TIL"><img src="images/github-logo.png" width="80%" height="60%"></a>
+          <p class="project-text"><span class="strike-through">매일</span> 공부한 기록</p>
+        </div>
+        <div class="item col-6">
+          <a href="https://solved.ac/profile/lemontime"><img src="images/solved-logo.png" width="80%" height="60%"></a>
+          <p class="project-text">알고리즘 풀이 기록</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- 기술 스택-->
-  <section id="skills" class="skills">skills</section>
+  <section id="skills" class="skills">
+    <div class="my-stack">
+      Python
+    </div>
+    <div class="container">
+      <div class="row1">
+            <div class="item col-2">
+              <img src="images/html-css.png" alt="html-css" height="100%" width="80%">
+            </div>
+            <div class="item col-2">
+              <img src="images/Django-logo.jpg" alt="Django" height="100%" width="80%">
+            </div>
+            <div class="item col-2">
+              <img src="images/MySQL-Logo.png" alt="MySQL" height="100%" width="80%">
+            </div>
+            <div class="item col-2">
+              <img src="images/Docker-logo.png" alt="Docker" height="100%" width="80%">
+            </div>
+      </div>
+      <div class="row2">
+        <div class="item col-2">
+          HTML/CSS
+        </div>
+        <div class="item col-2">
+          Django
+        </div>
+        <div class="item col-2">
+          MySQL
+        </div>
+        <div class="item col-2">
+          Docker
+        </div>
+  </div>
+    </div>
+  </section>
   <!-- 꼬리말 -->
   <footer class="footer">footer</footer>
 
