--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
@@ -161,7 +161,7 @@
     </div>
   </section>
   <!-- 꼬리말 -->
-  <footer class="footer">footer</footer>
+  <footer class="footer">2023 ~ ing SSAFY 10기 김동영</footer>
 
   <!-- 반응형 웹 -->
   <!-- bootstrap grid system -->
